--- a/public/css/burger_style.css
+++ b/public/css/burger_style.css
@@ -7,15 +7,31 @@ body {
 
 img {
     border-radius: 10px;
-    margin: 25px;
-    text-align: center;
+
+    float: right;
 
 }
 
 h1 {
     text-align: center;
+    font-family: Fondamento;
+    font-size: 50px;
+    font-weight: bold;
 }
 
+h2 {
+    font-family: Fondamento;
+    font-size: 40px;
+}
+    
+p {
+    font-family: Fondamento;
+    font-size: 16px;
+}
+
+#burger-text-area {
+    background-color: hsl(46, 91%, 57%)
+}
 .row {
     margin-right: 20px;
     margin-left: 20px;
