--- a/views/partials/addaBurger/burger-block.handlebars
+++ b/views/partials/addaBurger/burger-block.handlebars
@@ -1,9 +1,9 @@
-<li>
-	{{burger_name}}
+<li style="padding: 10px; list-style-type: none;">
+	<p style="padding-right: 5px;">{{burger_name}}</p>
 
-	<button class="EatIt" data-id="{{id}}" data-eataBurger="{{devoured}}">
-		{{#if devoured}}Devoured!{{else}}I'm Hungry!{{/if}}
+	<button class="EatIt btn-outline-dark btn btn-info" data-id="{{id}}" data-devoured="{{devoured}}">
+		{{#if devoured}}Devoured!{{else}}ReOrder!{{/if}}
 	</button>
 
- 	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button> 
+ 	<button class="delete-burger btn-outline-dark btn btn-info" data-id="{{this.id}}">DELETE!</button> 
 </li> 
