--- a/public/css/burger_style.css
+++ b/public/css/burger_style.css
@@ -7,7 +7,6 @@ body {
 
 img {
     border-radius: 10px;
-
     float: right;
 
 }
@@ -26,7 +25,8 @@ h2 {
     
 p {
     font-family: Fondamento;
-    font-size: 16px;
+    font-size: 20px;
+    margin-bottom: 2px;
 }
 
 #burger-text-area {
